Removed unused commented code

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /master/.vs/TTG Tools/v15/Server/sqlite3
+/master/.vs/TTG Tools/v15
