--- a/master/TTG Tools.csproj
+++ b/master/TTG Tools.csproj
@@ -74,7 +74,7 @@
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="zlib.net">
-      <HintPath>zlib\zlib.net.dll</HintPath>
+      <HintPath>..\..\..\Desktop\zlib.net.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
