--- a/master/TTG Tools.csproj
+++ b/master/TTG Tools.csproj
@@ -119,7 +119,7 @@
     <Compile Include="FormSettings.Designer.cs">
       <DependentUpon>FormSettings.cs</DependentUpon>
     </Compile>
-    <Compile Include="Swizzle.cs" />
+    <Compile Include="Graphics\Swizzle.cs" />
     <Compile Include="TextEditor.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -135,7 +135,7 @@
     <Compile Include="Methods.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TextureWorker.cs" />
+    <Compile Include="Graphics\TextureWorker.cs" />
     <EmbeddedResource Include="About.resx">
       <DependentUpon>About.cs</DependentUpon>
       <SubType>Designer</SubType>
