Trying rewrite code TTG Tools

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@
 /master/.vs/TTG Tools/v14
 /master/.vs/TTG Tools/v16/Server/sqlite3
 /master/.vs/TTG Tools/v16
+/master/Старый рабочий код
+/master/WorkedOldCode.txt
