Continue experiments with generation DDS header

--- a/master/TTG Tools.csproj
+++ b/master/TTG Tools.csproj
@@ -114,6 +114,7 @@
     <Compile Include="ClassesStructs\TextureClass.cs" />
     <Compile Include="Graphics\DDS\Caps.cs" />
     <Compile Include="Graphics\DDS\dds.cs" />
+    <Compile Include="Graphics\DDS\Decompress.cs" />
     <Compile Include="Graphics\DDS\Flags.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="ForThreads.cs" />
